[tool.poetry]
name = "funcoin"
version = "0.1.0"
description = ""
authors = ["NchannelFet <cody.holthus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyNaCl = "^1.4.0"
structlog = "^21.1.0"
colorama = "^0.4.4"
marshmallow = "^3.12.2"
marshmallow-oneofschema = "^3.0.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
